# Symposium

./: .gitignore  AccessStrategy.cpp  AccessStrategy.h  CMakeLists.txt  Color.cpp  Color.h  README.md  SymClient.cpp  SymClient.h  SymServer.cpp  SymServer.h  Symposium.doxy  Symposium.h  SymposiumException.cpp  SymposiumException.h  counter.h  document.cpp  document.h  filesystem.cpp  filesystem.h  main.cpp  message.cpp  message.h  messageData.h  privilege.cpp  privilege.h  resourceType.cpp  resourceType.h  symbol.cpp  symbol.h  uri.cpp  uri.h  user.cpp  user.h
Dispatcher/: Symposium.pro  clientdispatcher.cpp  clientdispatcher.h  serverdispatcher.h
GUI/SymposiumGui/: Document1.txt  Document2.txt  Document3.txt  Information.txt  SymposiumGui.pro  SymposiumGui_Server.pro  SymposiumGui_TEST_Server.pro  about.cpp  about.h  about.ui  activealwayslink.cpp  activealwayslink.h  activealwayslink.ui  activecounterlink.cpp  activecounterlink.h  activecounterlink.ui  activenonlink.cpp  activenonlink.h  activenonlink.ui  activetimerlink.cpp  activetimerlink.h  activetimerlink.ui  alluser.cpp  alluser.h  alluser.ui  avatarimg.qrc  buttonhoverwatcher.cpp  buttonhoverwatcher.h  changeuserinfo.cpp  changeuserinfo.h  changeuserinfo.ui  choosedir.cpp  choosedir.h  choosedir.ui  choosepriv.cpp  choosepriv.h  choosepriv.ui  currentusers.cpp  currentusers.h  currentusers.ui  (+80 more)
GUI/SymposiumGui/Dispatcher/: SymposiumGui_TEST_Server.pro  clientdispatcher.cpp  clientdispatcher.h  gui_symserver.cpp  gui_symserver.h  gui_symserver.ui  mainClient.cpp  mainServer.cpp  serverdispatcher.cpp  serverdispatcher.h
GUI/SymposiumGui/Dispatcher/TestClient/: Test_Client.pro  mainClient.cpp
GUI/SymposiumGui/Dispatcher/TestServer/: Test_Server.pro  mainServer.cpp
GUI/SymposiumGui/cartelle/: back_icon.html
GUI/SymposiumGui/cartelle/back_icon_files/: combo  combo(1)  isyc_Mystique_Srp_organic_viewer_40ae099e8d7fc0fb58003bfc4caeab3b.js.download  isyc_Mystique_Srp_organic_viewer_cb448d7f06017d01054e3daceffe63bd.css  isyc_sa-min_e64902f1b391b7cfb45c456ab3db79c3.js.download  th  th(1)  th(10)  th(100)  th(101)  th(102)  th(103)  th(104)  th(105)  th(106)  th(107)  th(108)  th(109)  th(11)  th(110)  th(111)  th(112)  th(113)  th(114)  th(115)  th(116)  th(117)  th(118)  th(119)  th(12)  th(120)  th(121)  th(122)  th(123)  th(124)  th(125)  th(126)  th(127)  th(128)  th(129)  (+100 more)
Test_GUI_Dispatcher/Client/: Client.pro  clientdispatcher.cpp  clientdispatcher.h  main.cpp
Test_GUI_Dispatcher/Client/GUI/login/: clientdispatcher.cpp  clientdispatcher.h  login.cpp  login.h  login.pro  login.ui  main.cpp  resource.qrc  success.cpp  success.h  success.ui  waiting.cpp  waiting.h  waiting.ui
Test_GUI_Dispatcher/Server/: Server.pro  main.cpp  serverdispatcher.cpp  serverdispatcher.h
documentation/html/: AccessStrategy_8h_source.html  Color_8h_source.html  SymClient_8h_source.html  SymServer_8h_source.html  SymposiumException_8h_source.html  Symposium_8h_source.html  annotated.html  classSymposium_1_1AccessStrategy-members.html  classSymposium_1_1AccessStrategy.html  classSymposium_1_1RMOAccess-members.html  classSymposium_1_1RMOAccess.html  classSymposium_1_1SymClient-members.html  classSymposium_1_1SymClient.html  classSymposium_1_1SymClientException-members.html  classSymposium_1_1SymClientException.html  classSymposium_1_1SymServer-members.html  classSymposium_1_1SymServer.html  classSymposium_1_1SymServerException-members.html  classSymposium_1_1SymServerException.html  classSymposium_1_1SymposiumException-members.html  classSymposium_1_1SymposiumException.html  classSymposium_1_1TrivialAccess-members.html  classSymposium_1_1TrivialAccess.html  classSymposium_1_1askResMessage-members.html  classSymposium_1_1askResMessage.html  classSymposium_1_1clientMessage-members.html  classSymposium_1_1clientMessage.html  classSymposium_1_1clientdispatcherException-members.html  classSymposium_1_1clientdispatcherException.html  classSymposium_1_1colorGen-members.html  classSymposium_1_1colorGen.html  classSymposium_1_1cursorMessage-members.html  classSymposium_1_1cursorMessage.html  classSymposium_1_1detail_1_1basic__counter-members.html  classSymposium_1_1detail_1_1basic__counter.html  classSymposium_1_1directory-members.html  classSymposium_1_1directory.html  classSymposium_1_1document-members.html  classSymposium_1_1document.html  classSymposium_1_1documentException-members.html  (+152 more)
documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  (+50 more)
documentation/internal/: ClassDiagramsUML.mdj  SymWinInterfaceUML.mdj  UpdateCursor.bpmn  changeUserData.bpmn  closeSource.bpmn  createNewDir.bpmn  createNewSource.bpmn  editPrivilege.bpmn  login.bpmn  logout.bpmn  mapSiteIdToUser.bpmn  openNewSource.bpmn  openSource.bpmn  removeResource.bpmn  removeUser.bpmn  renameResource.bpmn  shareResource.bpmn  signUp.bpmn  symbolInsertion.bpmn  symbolRemoval.bpmn
lib/hash/: sha256.cpp  sha256.h
tests/: AccessStrategyTest.cpp  FileSystemTest.cpp  SymClientTest.cpp  SymServerTest.cpp  documentTest.cpp  messageTest.cpp  symbolTest.cpp  uriTest.cpp  userTest.cpp
